Added login page and updated index.html with login link

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
     </style>
 </head>
 <body>
-    <a href="/login" class="login-button">Login</a>
+    <a href="login.html" class="login-button">Login</a>
     <div class="text-container">
         <div class="title">Gym Freak</div>
-        <div class="subtitle">Your Favourite Gym Partner </div>
+        <div class="subtitle">Your Fitness, Our Passion</div>
     </div>
 </body>
 </html>
